# hbcd-redcap2rs_old

./: README.md  convert_reproschema.py  hbcd_redcap2rs.yaml  pyproject.toml  update_hbcd_red2rs.py
.github/workflows/: autoconverter.yml
